refactor: move register endpoint to auth group
